view image and create dynamic menus

--- a/app/views/home/article.html.erb
+++ b/app/views/home/article.html.erb
@@ -1,1 +1,7 @@
-<h1>Article</h1>
+
+
+
+  <div class="top-message">
+    <h1>Halaman Article</h1>
+    <p>Find Hello me in app/views/home/index.html.erb</p>
+  </div>
