--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Hello Ruby On Rails</h1>
-<p>Find Hello me in app/views/home/index.html.erb</p>
+
+
+<div class="main top-main">
+  <div class="top-message">
+    <h1>Hello Ruby On Rails</h1>
+    <p>Find Hello me in app/views/home/index.html.erb</p>
+  </div>
+</div>
