--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,8 @@
-<h1>Halaman About</h1>
+
+
+
+  <div class="top-message">
+    <h1>Halaman About</h1>
+    <img src="/image.jpg" alt="" />
+  </div>
+
