--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,30 @@
 <html>
   <head>
     <title>Blog</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <header>
+      <div class="header-logo">
+        <a href="/">Websiteku</a>
+      </div>
+      <div class="header-menus">
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/article">Article</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
