use variable in view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
           <a href="/article">Article</a>
         </li>
         <li>
+          <a href="/post">Post</a>
+        </li>
+        <li>
           <a href="/about">About</a>
         </li>
       </div>
