--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,12 +1,19 @@
 <div class="main post-index">
-  <div class="container">
-    <div class="posts-index-item"><%= @firstpost %> <br /></div>
-
-    <div class="posts-index-item"><%= @secondpost%> <br /></div>
-
-    <% @data.each do |value| %>
-    <div class="posts-index-item"><%= value %></div>
+  <table border="1">
+    <tr>
+      <th>No</th>
+      <th>Judul</th>
+      <th>Deskripsi</th>
+    </tr>
+    <% 
+    no=0 
+    @data.each do |value| %>
+    <tr>
+      <td><%= no=no+1 %></td>
+      <td><%= value.title %></td>
+      <td><%= value.desc %></td>
+    </tr>
 
     <% end %>
-  </div>
+  </table>
 </div>
