create data to database

--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,5 +1,7 @@
 <div class="main post-index">
   <div class="container">
+    <p><%= flash[:message] %></p>
+    <a href="/post/input">Input Data</a>
     <table border="1">
       <tr>
         <th>No</th>
